--- a/index.html
+++ b/index.html
@@ -7,9 +7,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <title>Font Awesome Demo</title>
-    <link rel="stylesheet" href="https;//https://fontawesome.com/v6.0/icons" crossorigin="anonymous">
-    <link rel="stylesheet" href="/index.css">
-    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+    <!-- <link rel="stylesheet" href="https;//https://fontawesome.com/v6.0/icons" crossorigin="anonymous"> -->
+    <link rel="stylesheet" href="mystyle.css">
+    <!-- <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css"> -->
+    <style>
+        p{
+            font-variant: normal;
+            font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+        }
+    </style>
+    <style>
+        title {
+            font-size: large;
+        }
+    </style>
 </head>
 <body>
     <header>
